--- a/playbooks/templates/standalone_parameters.yaml.j2
+++ b/playbooks/templates/standalone_parameters.yaml.j2
@@ -17,6 +17,8 @@ parameter_defaults:
   NeutronDnsDomain: {{ clouddomain }}
   NeutronBridgeMappings: {{ neutron_bridge_mappings }}
   NeutronFlatNetworks: {{ neutron_flat_networks }}
+  NeutronNetworkType: 'flat,vlan'
+  NeutronNetworkVLANRanges: 'sriov:100:199'
   StandaloneEnableRoutedNetworks: false
   StandaloneHomeDir: "{{ ansible_env.HOME }}"
   InterfaceLocalMtu: 1500
@@ -33,3 +35,36 @@ parameter_defaults:
   OctaviaCaKeyPassphrase: "secrete"
   OctaviaAmphoraSshKeyFile: "{{ ansible_env.HOME }}/octavia.pub"
   OctaviaAmphoraImageFilename: "{{ ansible_env.HOME }}/amphora.qcow2"
+
+  NeutronPhysicalDevMappings: "{{ neutron_dev_physical_mappings }}"
+#
+  #IsolCpusList: "10-19,10-39"
+  #NovaComputeCpuDedicatedSet: [10-19,10-39]
+  NovaReservedHostMemory: 4096
+
+#  #KernelArgs: "default_hugepagesz=1GB hugepagesz=1G hugepages=32 iommu=pt intel_iommu=on isolcpus=1-19,21-39"
+#  TunedProfileName: "cpu-partitioning"
+  NovaPCIPassthrough:
+    - address: "0000:04:00.1"
+      trusted: "true"
+      physical_network: "sriov"
+  NeutronEnableDVR: false
+#  NeutronMechanismDrivers: ['sriovnicswitch','openvswitch']
+#  NeutronPluginExtensions: "qos,port_security"
+##  NovaSchedulerDefaultFilters: ['AvailabilityZoneFilter','ComputeFilter','ComputeCapabilitiesFilter','ImagePropertiesFilter','ServerGroupAntiAffinityFilter','ServerGroupAffinityFilter','PciPassthroughFilter']
+##  NovaSchedulerAvailableFilters: ["nova.scheduler.filters.all_filters","nova.scheduler.filters.pci_passthrough_filter.PciPassthroughFilter"]
+##
+##  #############################
+##  #  Scheduler configuration  #
+##  #############################
+#  NovaSchedulerDefaultFilters:
+#    - "RetryFilter"
+#    - "AvailabilityZoneFilter"
+#    - "ComputeFilter"
+#    - "ComputeCapabilitiesFilter"
+#    - "ImagePropertiesFilter"
+#    - "ServerGroupAntiAffinityFilter"
+#    - "ServerGroupAffinityFilter"
+#    - "PciPassthroughFilter"
+#    - "NUMATopologyFilter"
+#    - "AggregateInstanceExtraSpecsFilter"
