--- a/playbooks/templates/standalone_parameters.yaml.j2
+++ b/playbooks/templates/standalone_parameters.yaml.j2
@@ -35,14 +35,14 @@ parameter_defaults:
   OctaviaAmphoraImageFilename: "{{ ansible_env.HOME }}/amphora.qcow2"
 
   NeutronPhysicalDevMappings: "{{ neutron_dev_physical_mappings }}"
-
-  IsolCpusList: "18-19,38-39"
-  #KernelArgs: "default_hugepagesz=1GB hugepagesz=1G hugepages=32 iommu=pt intel_iommu=on isolcpus=1-19,21-39"
-  TunedProfileName: "cpu-partitioning"
+#
+#  IsolCpusList: "18-19,38-39"
+#  #KernelArgs: "default_hugepagesz=1GB hugepagesz=1G hugepages=32 iommu=pt intel_iommu=on isolcpus=1-19,21-39"
+#  TunedProfileName: "cpu-partitioning"
   NovaPCIPassthrough:
     - address: "0000:04:00.1"
       trusted: "true"
       physical_network: "sriov"
-  NovaComputeCpuDedicatedSet: '18-19,38-39'
+#  NovaComputeCpuDedicatedSet: '18-19,38-39'
   NovaReservedHostMemory: 4096
   NeutronEnableDVR: false
