p squashme # Please enter the commit message for your changes. Lines starting

--- a/playbooks/templates/standalone_parameters.yaml.j2
+++ b/playbooks/templates/standalone_parameters.yaml.j2
@@ -50,12 +50,12 @@ parameter_defaults:
   NeutronEnableDVR: false
 #  NeutronMechanismDrivers: ['sriovnicswitch','openvswitch']
 #  NeutronPluginExtensions: "qos,port_security"
-#  NovaSchedulerDefaultFilters: ['AvailabilityZoneFilter','ComputeFilter','ComputeCapabilitiesFilter','ImagePropertiesFilter','ServerGroupAntiAffinityFilter','ServerGroupAffinityFilter','PciPassthroughFilter']
-#  NovaSchedulerAvailableFilters: ["nova.scheduler.filters.all_filters","nova.scheduler.filters.pci_passthrough_filter.PciPassthroughFilter"]
-#
-#  #############################
-#  #  Scheduler configuration  #
-#  #############################
+##  NovaSchedulerDefaultFilters: ['AvailabilityZoneFilter','ComputeFilter','ComputeCapabilitiesFilter','ImagePropertiesFilter','ServerGroupAntiAffinityFilter','ServerGroupAffinityFilter','PciPassthroughFilter']
+##  NovaSchedulerAvailableFilters: ["nova.scheduler.filters.all_filters","nova.scheduler.filters.pci_passthrough_filter.PciPassthroughFilter"]
+##
+##  #############################
+##  #  Scheduler configuration  #
+##  #############################
 #  NovaSchedulerDefaultFilters:
 #    - "RetryFilter"
 #    - "AvailabilityZoneFilter"
